# Qt_VTK_OCC

./: .gitignore  CMakeLists.txt  README.ja_JP.md  README.jp_JP.md  README.md  README.zh_CN.md
src/: MainWindow.cpp  MainWindow.h  VtkOccView.cpp  VtkOccView.h  main.cpp
